Changes from version 0.4a to version 0.4b
=========================================
	- Copyrights changed to include the name of my laboratory.
	- Clean up of balloc.c and ialloc.c.
	- More consistency checks.
	- Block preallocation added by Stephen Tweedie.
	- Direct reads of directories disallowed.
	- Readahead implemented in readdir by Stephen Tweedie.
	- Bugs in block and inodes allocation fixed.
	- Readahead implemented in ext2_find_entry by Chip Salzenberg.
	- New mount options:
	  `check=none|normal|strict'
	  `debug'
	  `errors=continue|remount-ro|panic'
	  `grpid', `bsdgroups'
	  `nocheck'
	  `nogrpid', `sysvgroups'
	- truncate() now tries to deallocate contigous blocks in a single call
	  to ext2_free_blocks().
	- lots of cosmetic changes.

Changes from version 0.4 to version 0.4a
========================================
        - the `sync' option support is now complete.  Version 0.4 was not
          supporting it when truncating a file.  I have tested the synchronous
          writes and they work but they make the system very slow :-(  I have
          to work again on this to make it faster.
        - when detecting an error on a mounted filesystem, version 0.4 used
          to try to write a flag in the super block even if the filesystem had
          been mounted read-only.  This is fixed.
        - the `sb=#' option now causes the kernel code to use the filesystem
          descriptors located at block #+1.  Version 0.4 used the superblock
          backup located at block # but used the main copy of the descriptors.
        - a new file attribute `S' is supported.  This attribute causes
          synchronous writes but is applied to a file not to the entire file
          system (thanks to Michael Kraehe <kraehe@bakunin.north.de> for
          suggesting it).
        - the directory cache is inhibited by default.  The cache management
          code seems to be buggy and I have to look at it carefully before
          using it again.