@@ -1,18 +1,18 @@
 
-	Linux kernel release 0.99 patchlevel 15
+	Linux kernel release 1.0
 
-These are the release notes for linux version 0.99.15.  Read them
-carefully, as they tell you what's new, explain how to install the
-kernel, and what to do if something goes wrong. 
+These are the release notes for linux version 1.0.  Read them carefully,
+as they tell you what's new, explain how to install the kernel, and what
+to do if something goes wrong. 
 
 INSTALLING the kernel:
 
- - if you install by patching, you need a *clean* 0.99.14 source tree,
+ - if you install by patching, you need a *clean* 0.99.15 source tree,
    which presumably exists in /usr/src/linux.  If so, to get the kernel
    patched, just do a
 
 		cd /usr/src
-		patch -p0 < linux-0.99.patch15
+		patch -p0 < linux-1.0.patch
 
    and you should be ok.  You may want to remove the backup files (xxx~
    or xxx.orig), and make sure that there are no failed patches (xxx# or
@@ -21,7 +21,7 @@ INSTALLING the kernel:
  - If you install the full sources, do a
 
 		cd /usr/src
-		tar xvf linux-0.99.15.tar
+		tar xvf linux-1.0.tar
 
    to get it all put in place.
 
